temel kısımları eklenmeye başlandı

--- a/index.html
+++ b/index.html
@@ -10,17 +10,27 @@
   </head>
 
   <body>
-    <div id="app">
-      <div>
-        <a href="https://github.com/Workintech/fsweb-s5-bonus-challenge-html-pizza" target="_blank">
-          <img src="./workintech.svg" class="logo" alt="Workintech logo">
-        </a>
-        <h1>Hello Coder!</h1>
-        <p class="read-the-docs">
-          Click on the Workintech logo to see the Readme of the project
-        </p>
+    <header>
+      burası header bölümü
+      <button>ACIKTIM</button>
+    </header>
+    <main>
+      burası main bölümü
+    </main>
+
+    <section class="secenekler">bunlar seceneklerimiz</section>
+    
+    <section class="urunler">
+      bunlar ürünlerimiz
+    </section>
+
+    <footer>
+      burası footer bölümü
+      <div class="footer-container">
+
       </div>
-    </div>
+
+    </footer>
   </body>
 
 </html>
