html kısmı yazılmaya başlandı

--- a/index.html
+++ b/index.html
@@ -12,13 +12,42 @@
   <body>
     <header>
       burası header bölümü
-      <button>ACIKTIM</button>
+      <h2>Teknolojik Yemekler</h2>
+      <section class="aciklama">
+        <p>fırsatı kaçırma</p>
+        <h1>KOD ACIKTIRIR PIZZA, DOYURUR</h1>
+        <button>ACIKTIM</button>
+      </section>
+      <img src="" alt="">
+      <nav>
+        <ul>
+          <li>YENİ! Kore</li>
+          <li>Pizza</li>
+          <li>Burger</li>
+          <li>Kızartmalar</li>
+          <li>Fast food</li>
+          <li>Gazlı İçecek</li>
+        </ul>
+      </nav>
     </header>
     <main>
       burası main bölümü
+      <section class="resSec"></section>
+      <div>
+        <h3>en çok paketlenen menüler</h3>
+        <h2>Acıktıran Kodlara Doyuran Lezzetler</h2>
+      </div>
     </main>
 
-    <section class="secenekler">bunlar seceneklerimiz</section>
+    <section class="secenekler">
+      <nav>
+        <a href="">Ramen</a>
+        <a href="">Pizza</a>
+        <a href="">Burger</a>
+        <a href="">French Fries</a>
+        <a href="">Fast Food</a>
+        <a href="">Soft Drinks</a>
+    </nav></section>
     
     <section class="urunler">
       bunlar ürünlerimiz
@@ -26,7 +55,14 @@
 
     <footer>
       burası footer bölümü
-      <div class="footer-container">
+
+      <div class="footerUp">
+         <div class="solFooter">
+
+         </div>
+        <div class="sagFooter"></div>
+      </div>
+      <div class="footer-bottom">
 
       </div>
 
