css yapilmaya baslandi

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
   <body>
     <header>
-      burası header bölümü
-      <h2>Teknolojik Yemekler</h2>
       <section class="aciklama">
-        <p>fırsatı kaçırma</p>
-        <h1>KOD ACIKTIRIR PIZZA, DOYURUR</h1>
-        <button>ACIKTIM</button>
+        <div class="aciklama-logo">
+           <img src="public/assets/iteration-1/logo.svg" alt="">
+        </div>
+       <img src="public/assets/iteration-1/home-banner.png" alt="">
+       <div class="aciklama-content">
+         <p>fırsatı kaçırma</p>
+         <h1>KOD ACIKTIRIR PIZZA, DOYURUR</h1>
+         <button>ACIKTIM</button>
+       </div>
       </section>
-      <img src="" alt="">
+     
       <nav>
         <ul>
           <li>YENİ! Kore</li>
