css kısmının yarısı yapıldı

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <section class="resSec">
 
         <div class="resSecLeft">
@@ -62,16 +62,21 @@
         <section class="resSecRight">
           <div class="resSecRight-first">
             <img src="public/assets/iteration-2/cta/kart-2.png" alt="">
-            <div class="resSecRight-first-content">
 
-            </div>
+             <div class="resSecRight-content1">
+            <h2>Hackathlon</h2>
+            <h3>Burger Menü</h3>
+            <button>Siparis Ver</button>
+          </div>
           </div>
 
            <div class="resSecRight-second">
             <img src="public/assets/iteration-2/cta/kart-3.png" alt="">
-            <div class="resSecRight-second-content">
-              
-            </div>
+             <div class="resSecRight-content2">
+            <h2>Çooooook hızlı</h2>
+            <h3>npm gibi kurye</h3>
+            <button>Siparis Ver</button>
+          </div>
             
           </div>
 
@@ -97,10 +102,10 @@
 
        <div class="urun1">
         <div class="urun1-content">
-          <img src="" alt="">
+          <img src="public/assets/iteration-2/pictures/food-1.png" alt="">
           <div class="urun1-content-details">
 
-            <h4>Position Absolute Acı Pizza</h4>
+            <h4>Terminal Pizza</h4>
 
             <div class="urun1-content-details-numbers">
               <p>4.9</p>
@@ -113,7 +118,7 @@
 
        <div class="urun2">
         <div class="urun2-content">
-          <img src="" alt="">
+          <img src="public/assets/iteration-2/pictures/food-2.png" alt="">
           <div class="urun2-content-details">
 
             <h4>Position Absolute Acı Pizza</h4>
@@ -129,10 +134,10 @@
 
       <div class="urun3">
         <div class="urun3-content">
-          <img src="" alt="">
+          <img src="public/assets/iteration-2/pictures/food-3.png" alt="">
           <div class="urun3-content-details">
 
-            <h4>Position Absolute Acı Pizza</h4>
+            <h4>useEffect Tavuklu Burger</h4>
 
             <div class="urun3-content-details-numbers">
               <p>4.9</p>
