ufak duzeltmeler yapildi

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <img src="public/assets/iteration-1/home-banner.png" alt="">
        <div class="aciklama-content">
          <p>fırsatı kaçırma</p>
-         <h1>KOD ACIKTIRIR PIZZA, DOYURUR</h1>
+         <h1>KOD ACIKTIRIR<br>PIZZA, DOYURUR</h1>
          <button>ACIKTIM</button>
        </div>
       </section>
@@ -53,7 +53,7 @@
           <img src="public/assets/iteration-2/cta/kart-1.png" alt="">
 
           <div class="resSecLeft-content">
-            <h2>Özel Lezzetus</h2>
+            <h2>Özel<br>Lezzetus</h2>
             <h3>Position:Absolute Acı Burger</h3>
             <button>Siparis Ver</button>
           </div>
@@ -74,7 +74,7 @@
            <div class="resSecRight-second">
             <img src="public/assets/iteration-2/cta/kart-3.png" alt="">
              <div class="resSecRight-content2">
-            <h2>Çooooook hızlı</h2>
+            <h2><span class="red">Çooooook</span> hızlı</h2>
             <h3>npm gibi kurye</h3>
             <button>Siparis Ver</button>
           </div>
@@ -92,7 +92,7 @@
     <section class="secenekler">
       <nav>
         <a href=""> <img src="public/assets/iteration-2/icons/1.svg" alt="">Ramen</a>
-        <a href=""><img src="public/assets/iteration-2/icons/2.svg" alt="">Pizza</a>
+        <a class="active" href=""><img src="public/assets/iteration-2/icons/2.svg" alt="">Pizza</a>
         <a href=""><img src="public/assets/iteration-2/icons/3.svg" alt="">Burger</a>
         <a href=""><img src="public/assets/iteration-2/icons/4.svg" alt="">French Fries</a>
         <a href=""><img src="public/assets/iteration-2/icons/5.svg" alt="">Fast Food</a>
